# cmake-minimal

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: CMakeLists.txt  awesome-config.cmake.in  get_cpm.cmake
lib/: CMakeLists.txt  awesome.cpp  awesome.hpp
test/: CMakeLists.txt  dot.cpp
